src/App.css
@import "./constants.css";
@import url("https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap");

html,
body {
  margin: 0;
  padding: 0;
  overflow: hidden;
  touch-action: none;
  position: fixed;
  width: 100%;
  height: 100%;
  background: var(--bg-color);
}

.App {
  display: grid;
  place-content: center;
  height: 100vh;
  background: var(--bg-color);
  font-family: "Sofia Sans", sans-serif;
  grid-template-columns: auto 220px;
}

@media all and (max-width: 1023px) {
  .App {
    grid-template-columns: 1fr;
    grid-template-rows: auto auto auto;
    place-content: center;
    place-items: center;
    padding: 10px;
    overflow-y: auto;
  }

  html,
  body {
    overflow: auto;
    position: relative;
  }
}

